Resources/public/css/style.css
/*
 * This file is part of WebKeyPass.
 *
 * Copyright © 2013 Université Catholique de Louvain
 *
 * WebKeyPass is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * WebKeyPass is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with WebKeyPass.  If not, see <http://www.gnu.org/licenses/>.
 *
 * Author: Sébastien Wilmet
 */

body
{
    font-family: sans-serif;
}

h1
{
    text-align: center;
}

#side_panel
{
    position: absolute;
    top: 3em;
    left: 1em;
    width: 29em;
}

#side_panel #tree_view
{
    margin-top: 1em;
}

#contents
{
    position: absolute;
    top: 4em;
    left: 32em;
}

/* Contents: action links */

ul.actions
{
    margin: 0;
    padding: 0;
}

ul.actions li
{
    float: left;
    list-style: none;
    margin-right: 2em;
}

#contents ul.auth_actions
{
    margin-top: 0.5em;
}

/* Contents: information */

#contents table td
{
    padding-bottom: 1em;
    padding-right: 1em;
}

/* Form */

form label
{
    float: left;
    width: 8em;
}

form div
{
    margin-bottom: 1em;
}

textarea
{
    width: 40em;
    height: 10em;
}

/* Real tables */

table.data
{
    border: 1px solid black;
    border-collapse: collapse;
}

table.data th, table.data td
{
    border: 1px solid black;
    padding: 0.2em 0.5em;
}

/* Other */

div.flash-notice
{
    border: 1px solid;
    margin: 10px 0;
    padding:15px 10px;
    color: #4F8A10;
    background-color: #DFF2BF;
}

span.login
{
    margin-right: 2em;
}

#links
{
    float: right;
}

